--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,26 @@
     background-color: gainsboro;
     padding: 25px;
     
+}
+
+.contactanos{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 500px;
+    margin: 0 auto;
+
 
 }
+
+.form-control{
+    background-color: gainsboro;
+}
+
+
+
+
 
 /* media query servicios */
 
